add a refresh cluster button to the sending messages dialog; improve on displaying schemas of view message dialog; fix some schema error handling

--- a/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/add-or-view-message-modal.fxml
+++ b/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/add-or-view-message-modal.fxml
@@ -167,7 +167,7 @@
                                                    <SearchableComboBox fx:id="clusterComboBox" prefHeight="30.0" prefWidth="120.0" />
                                                    <SearchableComboBox fx:id="topicComboBox" prefHeight="30.0" prefWidth="357.0" />
                                                    <SearchableComboBox fx:id="partitionComboBox" prefHeight="30.0" prefWidth="177.0" />
-                                               <Button fx:id="refreshAllClustersBtn" mnemonicParsing="false" prefHeight="26.0" prefWidth="53.0" text="↻">
+                                               <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="53.0" text="↻" onAction="#refreshAllClusters">
                                                    <tooltip><Tooltip text="Refresh" /></tooltip>
                                                </Button>
                                            </children>
