--- a/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/add-or-view-message-modal.fxml
+++ b/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/add-or-view-message-modal.fxml
@@ -30,8 +30,8 @@
                                                 <RowConstraints maxHeight="216.0" minHeight="10.0" percentHeight="60.0" prefHeight="118.0" vgrow="SOMETIMES" />
                                     <RowConstraints maxHeight="178.0" minHeight="10.0" percentHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
                                                 <RowConstraints maxHeight="178.0" minHeight="10.0" percentHeight="20.0" prefHeight="79.0" vgrow="SOMETIMES" />
-                                                <RowConstraints maxHeight="129.0" minHeight="9.0" percentHeight="5.0" prefHeight="34.0" vgrow="SOMETIMES" />
-                                                <RowConstraints maxHeight="129.0" minHeight="10.0" percentHeight="5.0" prefHeight="34.0" vgrow="SOMETIMES" />
+                                                <RowConstraints maxHeight="129.0" minHeight="9.0" percentHeight="10.0" prefHeight="34.0" vgrow="SOMETIMES" />
+                                                <RowConstraints maxHeight="129.0" minHeight="10.0" percentHeight="10.0" prefHeight="34.0" vgrow="SOMETIMES" />
                                             </rowConstraints>
                                             <children>
                                                 <Label text="Key" GridPane.rowIndex="1">
@@ -77,7 +77,7 @@
                                                         <Insets left="10.0" />
                                                     </GridPane.margin>
                                                 </Label>
-                                                <ComboBox fx:id="valueContentTypeComboBox" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                                                <ComboBox fx:id="valueContentTypeComboBox" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                                                 <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2">
                                                     <children>
                                                         <Label text="Value">
