add SASL_PLAINTEXT, SASL_SSL with Kerberos

--- a/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/add-connection-modal.fxml
+++ b/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/add-connection-modal.fxml
@@ -114,7 +114,7 @@
                                                         <Label text="Sample" GridPane.rowIndex="2"/>
                                                         <HBox fx:id="sampleSecurityConfigContainer" prefHeight="100.0"
                                                               prefWidth="200.0" GridPane.columnIndex="1"
-                                                              GridPane.rowIndex="2">
+                                                              GridPane.rowIndex="2" spacing="10">
                                                             <padding>
                                                                 <Insets top="5.0"/>
                                                             </padding>
