add icons to KafkaClusterTree items; change button colors and icons

--- a/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/message-view.fxml
+++ b/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/message-view.fxml
@@ -77,7 +77,7 @@
                                     <Insets left="10.0" top="5.0"/>
                                 </HBox.margin>
                             </CheckBox>
-                            <Button mnemonicParsing="false" onAction="#addMessage" text="Add Msg">
+                            <Button mnemonicParsing="false" onAction="#addMessage" text="Add Msg" styleClass="accent">
                                 <HBox.margin>
                                     <Insets left="10.0" top="5.0"/>
                                 </HBox.margin>
