--- a/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/add-connection-modal.fxml
+++ b/my-kafka-tool-main/src/main/resources/io/github/nhtuan10/mykafkatool/add-connection-modal.fxml
@@ -137,7 +137,8 @@
                         <HBox prefHeight="40.0" prefWidth="598.0" spacing="10.0" AnchorPane.bottomAnchor="0.0"
                               AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <children>
-                                <Button fx:id="addBtn" mnemonicParsing="false" onAction="#add" text="OK">
+                                <Button fx:id="addBtn" mnemonicParsing="false" onAction="#add" text="OK"
+                                        styleClass="accent">
                                     <HBox.margin>
                                         <Insets left="10.0" top="5.0"/>
                                     </HBox.margin>
